Cleanup pages content

--- a/posts/2018-09-12-solr.md
+++ b/posts/2018-09-12-solr.md
@@ -98,7 +98,7 @@ Now you need to define the core schema. Solr itself can generate a schema based 
 
 Suppose you want to save the following object:
 
-<div id="output"><div id="jsonOutputWrapper">```
+```json
 {
    "id": "e55b6300-b016-11e8-8d04-d4619d2d8b56",
    "name": "product_name",
@@ -121,7 +121,8 @@ Suppose you want to save the following object:
 }
 ```
 
-</div><div class="buttons">Add the following fields:</div></div>```
+Add the following fields:
+```xml
 <field name="name" type="string_ci" indexed="true" stored="true" />
 <field name="manufacturer" type="string_ci" indexed="true" stored="true" />
 <field name="barcode" type="string_ci" indexed="true" stored="true" />
@@ -132,7 +133,7 @@ Suppose you want to save the following object:
 
 For the price we will use the *pdouble* type, already declared below in the same file. For the fields *name*, *manufacturer*, etc. you could use an existing *string* type or *text_generals*, but since we want the case insensitive search, we need to convert the contents of these fields to lowercase. To do this, we'll create our own type *string_ci:*
 
-```
+```xml
 <fieldType name="string_ci" class="solr.TextField" sortMissingLast="true" omitNorms="true"> 
     <analyzer> 
         <tokenizer class="solr.KeywordTokenizerFactory" /> 
@@ -145,7 +146,7 @@ For the price we will use the *pdouble* type, already declared below in the same
 Also create the type UUYD and change the type of the fields *id* and *root*:
 
 
-```
+```xml
 <field name="id" type="<strong>uuid</strong>" indexed="true" stored="true" required="true" multiValued="false" />
 <field name="_root_" type="<strong>uuid</strong>" indexed="true" stored="false" docValues="false" />
                            ...
@@ -172,7 +173,7 @@ However, we need to import data from the database. For this we can use [Data Imp
 
 First, you need to configure SolrRequestHandler to bind DIH to Solr. To do this, add the necessary library and configure the **requestHandler** (A request handler describes the request processing logic. Some of them process search requests, others manage various tasks) in the *server/solr/product/conf/solrconfig.xml* file:
 
-```
+```xml
 <lib dir="${solr.install.dir:../../../..}/dist/" regex="solr-dataimporthandler-\d.*\.jar" />
                           ...
 <requestHandler name="/dataimport" class="org.apache.solr.handler.dataimport.DataImportHandler">
@@ -182,7 +183,7 @@ First, you need to configure SolrRequestHandler to bind DIH to Solr. To do this,
 </requestHandler>
 ```
 
-```
+```xml
 <updateRequestProcessorChain name="uuid">
     <processor class="solr.UUIDUpdateProcessorFactory">
         <str name="fieldName">id</str>
@@ -196,7 +197,7 @@ Also, you need to add a driver to work with the database, for this you can creat
 *db-data-config.xml* – the name of the file with the import configuration. It contains:
 
 
-```
+```xml
 <dataConfig>
     <dataSource driver="org.postgresql.Driver"
                 url="jdbc:postgresql://localhost:5432/test"
@@ -273,7 +274,7 @@ Let's consider some parameters:
 
 Note that the *content_type* field is filled with a TemplateTansformer. Transformers are used to modify existing fields or to create new ones. You can use existing transformers or create custom ones. We also use our custom transformer to work with fields of the UUID format (We need to use it, because there is a problem with importing UUID format fields from the database into the index – you will get the error org.apache.solr.common.SolrException: TransactionLog doesn't know how to serialize class java.util.UUID; try implementing ObjectResolver?):
 
-```
+```java
 package com.test.solr.transformer;
 
 import org.apache.solr.handler.dataimport.Context;
@@ -339,6 +340,8 @@ Thus, the simplest query will return the contents of the first 10 documents: [ht
 #### Sample Queries
 
 Let's start with simple queries:
+
+#TODO: fix the table
 
 <div class="mks_col ">
 <div class="mks_one_third ">Equal</div>
